# Target_Engine

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  Untitled-2025-12-03-1837.excalidraw  ci3c01619_si_001.xlsx  ci3c01619_si_002.xlsx  pyproject.toml  target_discovery_design_doc (1).docx
.llm/cross_contrast_transcriptomics_evidence/: tmp_impl_plan.md  tmp_review.md
.llm/gse77314_expression_support/: tmp_impl_plan.md
.llm/hcc_extended_subset_support/: tmp_impl_plan.md
.llm/multi_evidence_target_ranking/: tmp_impl_plan.md
.llm/open_targets_genetics/: tmp_impl_plan.md
.llm/open_targets_genetics_audit/: tmp_impl_plan.md
.llm/provenance_kg_runtime_cache/: tmp_impl_plan.md
.llm/real_transcriptomics_ingestion/: tmp_impl_plan.md
.llm/recover_ipf_hcc_accessions/: tmp_context.md  tmp_exploration.md
.llm/rl_benchmark_eval/: tmp_impl_plan.md
.llm/second_real_ipf_connector/: tmp_impl_plan.md
.llm/string_network_evidence/: tmp_impl_plan.md
.llm/typed_mechanistic_graph/: tmp_impl_plan.md
.llm/verify_scientific_accuracy/: tmp_context.md  tmp_exploration.md
apps/api/: README.md  server.py
apps/web/: README.md  app.js  index.html  styles.css
data_contracts/: README.md
docs/: README.md
scripts/: build_reactome_membership_cache.py  export_benchmark_health.py  generate_first_wave_registry.rb  materialize_benchmark_exports.py  save_rl_benchmark_report.py  save_verification_report.py  validate_benchmark_assertions.rb  validate_benchmark_packs.rb  validate_contract_examples.rb  validate_registry_artifacts.rb  validate_subset_configs.rb  validate_transcriptomics_fixtures.rb
tests/: __init__.py
(+180 files in other folders)
